infra/k8s/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boring-stallman-a853a87033-srv
  namespace: apps-release
spec:
  selector:
    app: boring-stallman-a853a87033
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7070
  type: NodePort
