infra/k8s/gke/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boring-stallman-route
  namespace: apps-release
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: lcnc-gateway
    namespace: default    # Crucial: Points to the Gateway in 'default'
    sectionName: https
  hostnames:
  - "cc1fbde45ead-in-south-02.mayson.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /us-east-2-backstractelb-621aff-coll-c766e74b4a974272b188e43d174331e7
    backendRefs:
    - name: boring-stallman-a853a87033-srv
      port: 80
